[project]
name = "tbg-sam3"
description = "A ComfyUI custom node extension integrating Meta's Segment Anything Model 3 (SAM 3) for advanced image and video segmentation with text-prompt, point-based, and mask-driven capabilities. Provides production-ready nodes compatible with ComfyUI's Impact Pack SEGS format, depth map generation, and support for Python 3.13+ with CUDA and CPU support."
version = "1.0.1"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# SAM3 Node - COMPLETE Dependencies for Python 3.13", "# Only packages NOT in ComfyUI standard installation", "# Hugging Face for model downloading", "huggingface_hub>=0.23.0", "# OpenCV for image/video processing", "opencv-python>=4.8.0", "# Timm for vision transformers", "timm>=0.9.0", "# SAM3 REQUIRED dependencies (not auto-installed with --no-deps)", "decord>=0.6.0", "av>=9.0.0", "hydra-core>=1.3.0", "omegaconf>=2.3.0", "einops>=0.6.0", "tqdm>=4.65.0", "pycocotools>=2.0.6", "iopath>=0.1.9", "shapely>=1.8.0", "# Additional dependencies that SAM3 may need", "# (scipy, scikit-image, matplotlib, pandas are in ComfyUI)", "# SAM3 installed via install.py from GitHub", "# git+https://github.com/facebookresearch/sam3.git"]

[project.urls]
Repository = "https://github.com/Ltamann/ComfyUI-TBG-SAM3"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/Ltamann/ComfyUI-TBG-SAM3/wiki"
"Bug Tracker" = "https://github.com/Ltamann/ComfyUI-TBG-SAM3/issues"

[tool.comfy]
PublisherId = "tbg"
DisplayName = "ComfyUI-TBG-SAM3"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

